--- a/.github/workflows/grs.yaml
+++ b/.github/workflows/grs.yaml
@@ -24,7 +24,13 @@ jobs:
         uses: soulteary/github-readme-stats-action@v1.0.0
         with:
           card: top-langs
-          options: 'username=${{ github.repository_owner }}&layout=compact&langs_count=6&hide=Jupyter%20Notebook'
+          options: >
+            {
+              "username": "${{ github.repository_owner }}",
+              "layout": "compact",
+              "langs_count": 6,
+              "hide": ["Jupyter Notebook"]
+            }
           path: profile/top-langs.svg
           token: ${{ secrets.STATS_TOKEN }}
 
