--- a/.github/workflows/grs.yaml
+++ b/.github/workflows/grs.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: soulteary/github-readme-stats-action@v1.0.0
         with:
           card: top-langs
-          options: 'username=${{ github.repository_owner }}&layout=compact&hide=Jupyter+Notebook'
+          options: 'username=${{ github.repository_owner }}&layout=compact&hide=ipynb'
           path: profile/top-langs.svg
           token: ${{ secrets.STATS_TOKEN }}
 
